# omniswitch_ci_cd

./: .gitignore  README.md  pyproject.toml
configs/: defaults.yaml  devices.yaml
src/switchtest/: __init__.py  app.py  cli.py  constants.py  exceptions.py  exitcodes.py  orchestrator.py
src/switchtest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/switchtest/domain/: __init__.py  device.py  enums.py  results.py  runtime.py  suite.py  testcase.py
src/switchtest/drivers/: __init__.py  aos.py  base.py
src/switchtest/infrastructure/: ping.py  secrets.py
src/switchtest/infrastructure/loaders/: __init__.py  common.py  devices.py  suites.py  testcases.py
src/switchtest/infrastructure/reporting/: console.py  json_report.py  junit_report.py
src/switchtest/infrastructure/ssh/: __init__.py  client.py  prompt.py
src/switchtest/services/: baseline_service.py  execution_service.py  metadata_service.py  recovery_service.py  validation_service.py
src/switchtest/utils/: templating.py  text.py  time.py
suites/: cis_smoke.yaml  regression.yaml  smoke.yaml
testcases/cis/: check_aaa_configured.yaml  check_http_disabled.yaml  check_https_enabled.yaml  check_ntp_configured.yaml  check_snmpv3_configured.yaml  check_ssh_enabled.yaml  check_syslog_configured.yaml  check_telnet_disabled.yaml
testcases/l3/: ping_gateway.yaml
testcases/system/: check_firmware.yaml  login.yaml
testcases/vlan/: vlan_create.yaml
tests/: test_aos_driver.py  test_aos_show_cleanup.py  test_app.py  test_loaders.py  test_validation_service.py
